src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Type__c</fullName>
        <label>Answer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paragraph text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Selection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkboxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choose from a list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Questions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Order__c</fullName>
        <label>Question Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BLN Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Question_Text__c</columns>
        <columns>Answer_Type__c</columns>
        <columns>Question_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Imperial Global MBA - Information Sessions</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QUE-{000000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>